# planetary-computer-sdk-for-python

./: CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: continuous-integration.yml  release.yml
planetary_computer/: __init__.py  _adlfs.py  _pc_fs.py  models.py  sas.py  settings.py  utils.py  version.py
scripts/: cibuild  format  test
tests/: test_adlfs.py  test_settings.py  test_sign_assets.py  test_signing.py
tests/data-files/: catalog.json  sample-collection.json  sample-item.json  sample-reference-file.json  sample-tabular-item.json  sample-zarr-item.json  sample-zarr-open-dataset-item.json  stacit.vrt
