[metadata]
name = planetary-computer
version = 0.2.2
license_file = LICENSE
author = microsoft
author_email = planetarycomputer@microsoft.com
long_description = file:README.md
long_description_content_type = text/markdown
description = Planetary Computer SDK for Python

[options]
packages = find:
install_requires =
    click>=7.1
    pydantic[dotenv]>=1.7.3
    pystac>=0.5.6,<0.6
    pystac-client>=0.1.1,<0.2.0
    pytz>=2020.5
    requests>=2.25.1

[options.entry_points]
console_scripts =
    planetarycomputer = planetary_computer.scripts.cli:app
