[metadata]
name = planetary-computer
version = 0.4.9
license_file = LICENSE
author = microsoft
author_email = planetarycomputer@microsoft.com
long_description = file:README.md
long_description_content_type = text/markdown
description = Planetary Computer SDK for Python

[options]
python_requires = >=3.7
packages = find:
install_requires =
    click>=7.1
    pydantic[dotenv]>=1.7.3
    pystac>=1.0.0
    pystac-client>=0.2.0
    pytz>=2020.5
    requests>=2.25.1

[options.extras_require]
adlfs = adlfs
azure = azure-storage-blob

[options.entry_points]
console_scripts =
    planetarycomputer = planetary_computer.scripts.cli:app
